<resources>
    <string name="app_name">Connect</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="phone">###-###-####</string>
    <string name="next">Next</string>
    <string name="verification">####</string>
</resources>
