<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_salmon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/verification_number"
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:ems="10"
            android:gravity="bottom|center"
            android:hint="@string/verification"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Button
            android:id="@+id/verify_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="249dp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password" />

    </LinearLayout>

</LinearLayout>