<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_salmon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_phone"
            android:layout_width="400dp"
            android:layout_height="351dp"
            android:digits="0123456789"
            android:ems="10"
            android:gravity="bottom"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="249dp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password" />

    </LinearLayout>

</LinearLayout>